--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = Zmakan-Technical-Solutions/account_retention
 	url = git@github.com:Zmakan-Technical-Solutions/account_retention.git
 	branch = 12.0
+[submodule "Zmakan-Technical-Solutions/zts_project_enhancement"]
+	path = Zmakan-Technical-Solutions/zts_project_enhancement
+	url = git@github.com:Zmakan-Technical-Solutions/zts_project_enhancement.git
+	branch = 12.0
