[info]purchase approvals

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = Zmakan-Technical-Solutions/zts_approval_workflow
 	url = git@github.com:Zmakan-Technical-Solutions/zts_approval_workflow.git
 	branch = 12.0
+[submodule "Zmakan-Technical-Solutions/zts_approval_workflow_purchase"]
+	path = Zmakan-Technical-Solutions/zts_approval_workflow_purchase
+	url = git@github.com:Zmakan-Technical-Solutions/zts_approval_workflow_purchase.git
+	branch = 12.0
