--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = Zmakan-Technical-Solutions/zts_approval_workflow_purchase
 	url = git@github.com:Zmakan-Technical-Solutions/zts_approval_workflow_purchase.git
 	branch = 12.0
+[submodule "Zmakan-Technical-Solutions/zts_approval_workflow_payment"]
+	path = Zmakan-Technical-Solutions/zts_approval_workflow_payment
+	url = git@github.com:Zmakan-Technical-Solutions/zts_approval_workflow_payment.git
+	branch = 12.0
